--- a/realoca.css
+++ b/realoca.css
@@ -32,7 +32,7 @@ form{
     width: 100%;
     border-radius: 20px;
     padding: 10px;
-    color:rgb(197, 187, 187);
+    color:rgb(255, 255, 255);
     border: 0px;
     outline: 0px;
     font-family: sans-serif;
@@ -40,13 +40,16 @@ form{
  .btn button:hover{
      background-image: linear-gradient(to right, #7bb7d4, #2d455f  );
  }
+ #ops{
+     font-family: sans-serif;
+     float: auto;
+ }
 .login-grupo > input{
     border-radius: 5px;
     outline: 0;
     width: 100%;
     height: 20px;
     padding: 5px;
-
 }
 .imgrealoca{
     border-radius: 5px;
